# kapruka-agent-backend

./: .gitignore  README.md  config.yaml  pyproject.toml  render.yaml
.github/workflows/: deploy.yml
app/: main.py
app/agents/: graph.py  state.py
app/agents/nodes/: checkout.py  concierge.py  reflection.py  router.py  shopper.py  tracking.py
app/api/v1/: chat.py  checkout.py  health.py  sessions.py  tryon.py
app/core/: cart_validator.py  category_cache.py  config.py  database.py  prompt_loader.py  schemas.py
app/data/: kapruka_categories.json  sessions.json
app/mcp/: client.py  tools.py
app/prompts/: concierge.j2  reflection.j2  router.j2  shopper.j2  vision.j2
data/: sessions.json
tests/: test_get_product.py  test_mcp.py  test_pipeline.py
