[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "langchain-core>=1.4.2",
    "langgraph>=1.2.4",
    "langsmith>=0.8.11",
    "mcp>=1.27.2",
    "openai>=2.41.0",
    "pillow>=12.2.0",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "pyyaml>=6.0.3",
    "uvicorn>=0.49.0",
]
